# fed-capture-dashboard

./: .gitignore  README.md  dbt_project.yml  profiles.yml  pyproject.toml
docs/: analytical_perspectives.md  references.md
export/: mart_to_csv.py
ingest/: sam.py
models/marts/: _marts.yml  dim_naics.sql  dim_psc.sql  mart_opportunities.sql
models/staging/: _sam.yml  stg_sam_opportunities.sql
scripts/: build_naics_seed.py  build_psc_seed.py
seeds/: naics_codes.csv  psc_codes.csv  target_naics.csv
spike/: spike_sam.py  spike_snowflake.py  spike_usaspending.py
tableau/: federal-opportunities.twb  ~federal-opportunities__133684.twbr
