[project]
name = "fed-capture-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "snowflake-connector-python[pandas]>=4.6.0",
]
